canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
  name: canary
spec:
  ingressClassName: nginx-default
  rules:
    - host: canary.example.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: canary
                port:
                  number: 80
