ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: ingress
spec:
  ingressClassName: nginx-default
  rules:
    - host: canary.example.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: humans
                port:
                  number: 80
